--- a/Il2CppDumper/Il2CppDumper.csproj
+++ b/Il2CppDumper/Il2CppDumper.csproj
@@ -55,7 +55,12 @@
     <Compile Include="MyBinaryReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="v23\Dump.cs" />
+    <Compile Include="v23\Elf.cs" />
+    <Compile Include="v23\Il2Cpp.cs" />
     <Compile Include="v23\Il2CppClass.cs" />
+    <Compile Include="v23\Macho.cs" />
+    <Compile Include="v23\Metadata.cs" />
     <Compile Include="v23\MetadataClass.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
