支持64bit macho文件(auto部分尚未完工)

--- a/Il2CppDumper/Il2CppDumper.csproj
+++ b/Il2CppDumper/Il2CppDumper.csproj
@@ -42,6 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="64bit\Dump.cs" />
+    <Compile Include="64bit\Il2Cpp.cs" />
+    <Compile Include="64bit\Il2CppClass.cs" />
+    <Compile Include="64bit\Macho.cs" />
+    <Compile Include="64bit\MachoClass.cs" />
     <Compile Include="DefineConstants.cs" />
     <Compile Include="Elf.cs" />
     <Compile Include="ElfClass.cs" />
@@ -55,6 +60,11 @@
     <Compile Include="MyBinaryReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="v23\64bit\Dump.cs" />
+    <Compile Include="v23\64bit\Il2Cpp.cs" />
+    <Compile Include="v23\64bit\Il2CppClass.cs" />
+    <Compile Include="v23\64bit\Macho.cs" />
+    <Compile Include="v23\64bit\MachoClass.cs" />
     <Compile Include="v23\Dump.cs" />
     <Compile Include="v23\Elf.cs" />
     <Compile Include="v23\Il2Cpp.cs" />
@@ -63,6 +73,7 @@
     <Compile Include="v23\Metadata.cs" />
     <Compile Include="v23\MetadataClass.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
