--- a/Il2CppDumper/Il2CppDumper.csproj
+++ b/Il2CppDumper/Il2CppDumper.csproj
@@ -42,27 +42,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="64bit\Dump.cs" />
-    <Compile Include="64bit\Il2Cpp.cs" />
-    <Compile Include="64bit\Il2CppClass.cs" />
-    <Compile Include="64bit\Macho.cs" />
-    <Compile Include="64bit\MachoClass.cs" />
+    <Compile Include="v20\Dump.cs" />
+    <Compile Include="v20\Elf.cs" />
+    <Compile Include="v20\Il2Cpp.cs" />
+    <Compile Include="v20\Macho.cs" />
+    <Compile Include="v20\Metadata.cs" />
+    <Compile Include="v21\64bit\Dump.cs" />
+    <Compile Include="v21\64bit\Il2Cpp.cs" />
+    <Compile Include="v21\64bit\Il2CppClass.cs" />
+    <Compile Include="v21\64bit\Macho.cs" />
     <Compile Include="ArmHelper.cs" />
     <Compile Include="DefineConstants.cs" />
-    <Compile Include="Elf.cs" />
+    <Compile Include="v21\Elf.cs" />
     <Compile Include="ElfClass.cs" />
-    <Compile Include="Il2Cpp.cs" />
-    <Compile Include="Il2CppClass.cs" />
-    <Compile Include="Macho.cs" />
+    <Compile Include="v21\Il2Cpp.cs" />
+    <Compile Include="v21\Il2CppClass.cs" />
+    <Compile Include="v21\Macho.cs" />
     <Compile Include="MachoClass.cs" />
     <Compile Include="MachoFat.cs" />
-    <Compile Include="Metadata.cs" />
-    <Compile Include="MetadataClass.cs" />
+    <Compile Include="v21\Metadata.cs" />
+    <Compile Include="v21\MetadataClass.cs" />
     <Compile Include="MyBinaryReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="v16\Dump.cs" />
-    <Compile Include="v16\Elf.cs" />
     <Compile Include="v16\Il2Cpp.cs" />
     <Compile Include="v16\Il2CppClass.cs" />
     <Compile Include="v16\Macho.cs" />
@@ -70,13 +73,21 @@
     <Compile Include="v16\MetadataClass.cs" />
     <Compile Include="v20\Il2CppClass.cs" />
     <Compile Include="v20\MetadataClass.cs" />
+    <Compile Include="v22\64bit\Dump.cs" />
+    <Compile Include="v22\64bit\Il2Cpp.cs" />
+    <Compile Include="v22\64bit\Il2CppClass.cs" />
+    <Compile Include="v22\64bit\Macho.cs" />
+    <Compile Include="v22\Dump.cs" />
+    <Compile Include="v22\Elf.cs" />
+    <Compile Include="v22\Il2Cpp.cs" />
     <Compile Include="v22\Il2CppClass.cs" />
+    <Compile Include="v22\Macho.cs" />
+    <Compile Include="v22\Metadata.cs" />
     <Compile Include="v22\MetadataClass.cs" />
     <Compile Include="v23\64bit\Dump.cs" />
     <Compile Include="v23\64bit\Il2Cpp.cs" />
     <Compile Include="v23\64bit\Il2CppClass.cs" />
     <Compile Include="v23\64bit\Macho.cs" />
-    <Compile Include="v23\64bit\MachoClass.cs" />
     <Compile Include="v23\Dump.cs" />
     <Compile Include="v23\Elf.cs" />
     <Compile Include="v23\Il2Cpp.cs" />
