重构，添加通用处理类

--- a/Il2CppDumper/Il2CppDumper.csproj
+++ b/Il2CppDumper/Il2CppDumper.csproj
@@ -42,58 +42,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="v20\Dump.cs" />
-    <Compile Include="v20\Elf.cs" />
-    <Compile Include="v20\Il2Cpp.cs" />
-    <Compile Include="v20\Macho.cs" />
-    <Compile Include="v20\Metadata.cs" />
-    <Compile Include="v21\64bit\Dump.cs" />
-    <Compile Include="v21\64bit\Il2Cpp.cs" />
+    <Compile Include="Elf.cs" />
+    <Compile Include="Il2CppGeneric.cs" />
+    <Compile Include="Il2CppGenericClass.cs" />
+    <Compile Include="Macho.cs" />
+    <Compile Include="MetadataGeneric.cs" />
+    <Compile Include="MetadataGenericClass.cs" />
+    <Compile Include="MyCopy.cs" />
+    <Compile Include="v16\64bit\Il2CppClass.cs" />
+    <Compile Include="v20\64bit\Il2CppClass.cs" />
     <Compile Include="v21\64bit\Il2CppClass.cs" />
-    <Compile Include="v21\64bit\Macho.cs" />
     <Compile Include="ArmHelper.cs" />
     <Compile Include="DefineConstants.cs" />
-    <Compile Include="v21\Elf.cs" />
     <Compile Include="ElfClass.cs" />
-    <Compile Include="v21\Il2Cpp.cs" />
     <Compile Include="v21\Il2CppClass.cs" />
-    <Compile Include="v21\Macho.cs" />
     <Compile Include="MachoClass.cs" />
     <Compile Include="MachoFat.cs" />
-    <Compile Include="v21\Metadata.cs" />
     <Compile Include="v21\MetadataClass.cs" />
     <Compile Include="MyBinaryReader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="v16\Dump.cs" />
-    <Compile Include="v16\Il2Cpp.cs" />
     <Compile Include="v16\Il2CppClass.cs" />
-    <Compile Include="v16\Macho.cs" />
-    <Compile Include="v16\Metadata.cs" />
     <Compile Include="v16\MetadataClass.cs" />
     <Compile Include="v20\Il2CppClass.cs" />
     <Compile Include="v20\MetadataClass.cs" />
-    <Compile Include="v22\64bit\Dump.cs" />
-    <Compile Include="v22\64bit\Il2Cpp.cs" />
     <Compile Include="v22\64bit\Il2CppClass.cs" />
-    <Compile Include="v22\64bit\Macho.cs" />
-    <Compile Include="v22\Dump.cs" />
-    <Compile Include="v22\Elf.cs" />
-    <Compile Include="v22\Il2Cpp.cs" />
     <Compile Include="v22\Il2CppClass.cs" />
-    <Compile Include="v22\Macho.cs" />
-    <Compile Include="v22\Metadata.cs" />
     <Compile Include="v22\MetadataClass.cs" />
-    <Compile Include="v23\64bit\Dump.cs" />
-    <Compile Include="v23\64bit\Il2Cpp.cs" />
     <Compile Include="v23\64bit\Il2CppClass.cs" />
-    <Compile Include="v23\64bit\Macho.cs" />
-    <Compile Include="v23\Dump.cs" />
-    <Compile Include="v23\Elf.cs" />
-    <Compile Include="v23\Il2Cpp.cs" />
+    <Compile Include="Macho64.cs" />
     <Compile Include="v23\Il2CppClass.cs" />
-    <Compile Include="v23\Macho.cs" />
-    <Compile Include="v23\Metadata.cs" />
     <Compile Include="v23\MetadataClass.cs" />
   </ItemGroup>
   <ItemGroup />
