--- a/Il2CppDumper/config.json
+++ b/Il2CppDumper/config.json
@@ -2,5 +2,6 @@
   "dumpmethod": true,
   "dumpfield": true,
   "dumpproperty": false,
-  "dumpattribute": false
+  "dumpattribute": false,
+  "dumpfieldOffset": true
 }
