--- a/Il2CppDumper/Il2CppDumper.csproj
+++ b/Il2CppDumper/Il2CppDumper.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Macho.cs" />
     <Compile Include="Metadata.cs" />
     <Compile Include="MetadataClass.cs" />
+    <Compile Include="PE.cs" />
+    <Compile Include="PEClass.cs" />
     <Compile Include="Resource1.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
