处理泛型函数地址 MakeFunction添加到config 一些细节调整

--- a/Il2CppDumper/config.json
+++ b/Il2CppDumper/config.json
@@ -5,6 +5,7 @@
   "DumpAttribute": false,
   "DumpFieldOffset": true,
   "DummyDll": true,
+  "MakeFunction": false,
   "ForceIl2CppVersion": false,
   "ForceVersion": 16
 }
