基础Unity2019.1支持 Elf arm Unity2019.1支持

--- a/Il2CppDumper/Il2CppDumper.csproj
+++ b/Il2CppDumper/Il2CppDumper.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BoyerMooreHorspool.cs" />
     <Compile Include="Lz4DecoderStream.cs" />
     <Compile Include="NSO.cs" />
     <Compile Include="NSOClass.cs" />
