--- a/Il2CppDumper/Il2CppDumper.csproj
+++ b/Il2CppDumper/Il2CppDumper.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Lz4DecoderStream.cs" />
     <Compile Include="NSO.cs" />
     <Compile Include="NSOClass.cs" />
+    <Compile Include="SearchSection.cs" />
     <Compile Include="VersionAttribute.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="DummyAssemblyCreator.cs" />
