--- a/Il2CppDumper/packages.config
+++ b/Il2CppDumper/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Mono.Cecil" version="0.11.1" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net40" />
 </packages>
