--- a/Il2CppDumper/Il2CppDumper.csproj
+++ b/Il2CppDumper/Il2CppDumper.csproj
@@ -49,14 +49,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BoyerMooreHorspool.cs" />
+    <Compile Include="Il2CppDecompiler.cs" />
     <Compile Include="Il2CppDummyDll.cs" />
     <Compile Include="Lz4DecoderStream.cs" />
     <Compile Include="NSO.cs" />
     <Compile Include="NSOClass.cs" />
+    <Compile Include="ScriptGenerator.cs" />
     <Compile Include="SearchSection.cs" />
     <Compile Include="VersionAttribute.cs" />
     <Compile Include="Config.cs" />
-    <Compile Include="DummyAssemblyCreator.cs" />
+    <Compile Include="DummyAssemblyGenerator.cs" />
     <Compile Include="Elf.cs" />
     <Compile Include="Elf64.cs" />
     <Compile Include="Elf64Class.cs" />
