--- a/Il2CppDumper/Il2CppDumper.csproj
+++ b/Il2CppDumper/Il2CppDumper.csproj
@@ -51,40 +51,42 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BoyerMooreHorspool.cs" />
-    <Compile Include="ElfConstants.cs" />
-    <Compile Include="Il2CppDecompiler.cs" />
-    <Compile Include="Il2CppDummyDll.cs" />
-    <Compile Include="Lz4DecoderStream.cs" />
-    <Compile Include="NSO.cs" />
-    <Compile Include="NSOClass.cs" />
-    <Compile Include="ScriptGenerator.cs" />
-    <Compile Include="SearchSection.cs" />
-    <Compile Include="StringExtensions.cs" />
-    <Compile Include="VersionAttribute.cs" />
+    <Compile Include="Extensions\BoyerMooreHorspool.cs" />
+    <Compile Include="ExecutableFormats\ElfConstants.cs" />
+    <Compile Include="Extensions\HexExtensions.cs" />
+    <Compile Include="Outputs\DummyAssemblyExporter.cs" />
+    <Compile Include="Outputs\Il2CppDecompiler.cs" />
+    <Compile Include="Utils\Il2CppDummyDll.cs" />
+    <Compile Include="Outputs\Il2CppConstants.cs" />
+    <Compile Include="IO\Lz4DecoderStream.cs" />
+    <Compile Include="ExecutableFormats\NSO.cs" />
+    <Compile Include="ExecutableFormats\NSOClass.cs" />
+    <Compile Include="Outputs\ScriptGenerator.cs" />
+    <Compile Include="Utils\SearchSection.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
+    <Compile Include="Attributes\VersionAttribute.cs" />
     <Compile Include="Config.cs" />
-    <Compile Include="DummyAssemblyGenerator.cs" />
-    <Compile Include="Elf.cs" />
-    <Compile Include="Elf64.cs" />
-    <Compile Include="Elf64Class.cs" />
-    <Compile Include="Il2CppClass.cs" />
-    <Compile Include="Il2Cpp.cs" />
-    <Compile Include="Macho.cs" />
-    <Compile Include="Metadata.cs" />
-    <Compile Include="MetadataClass.cs" />
-    <Compile Include="MyAssemblyResolver.cs" />
-    <Compile Include="PE.cs" />
-    <Compile Include="PEClass.cs" />
-    <Compile Include="PlusSearch.cs" />
-    <Compile Include="ArmHelper.cs" />
-    <Compile Include="DefineConstants.cs" />
-    <Compile Include="ElfClass.cs" />
-    <Compile Include="MachoClass.cs" />
-    <Compile Include="MachoFat.cs" />
-    <Compile Include="BinaryStream.cs" />
+    <Compile Include="Utils\DummyAssemblyGenerator.cs" />
+    <Compile Include="ExecutableFormats\Elf.cs" />
+    <Compile Include="ExecutableFormats\Elf64.cs" />
+    <Compile Include="ExecutableFormats\Elf64Class.cs" />
+    <Compile Include="ExecutableFormats\Il2CppClass.cs" />
+    <Compile Include="ExecutableFormats\Il2Cpp.cs" />
+    <Compile Include="ExecutableFormats\Macho.cs" />
+    <Compile Include="ExecutableFormats\Metadata.cs" />
+    <Compile Include="ExecutableFormats\MetadataClass.cs" />
+    <Compile Include="Utils\MyAssemblyResolver.cs" />
+    <Compile Include="ExecutableFormats\PE.cs" />
+    <Compile Include="ExecutableFormats\PEClass.cs" />
+    <Compile Include="Utils\PlusSearch.cs" />
+    <Compile Include="Utils\ArmHelper.cs" />
+    <Compile Include="ExecutableFormats\ElfClass.cs" />
+    <Compile Include="ExecutableFormats\MachoClass.cs" />
+    <Compile Include="ExecutableFormats\MachoFat.cs" />
+    <Compile Include="IO\BinaryStream.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Macho64.cs" />
+    <Compile Include="ExecutableFormats\Macho64.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -98,6 +100,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
