添加数组类型读取

--- a/Il2CppDumper/Il2CppDumper.csproj
+++ b/Il2CppDumper/Il2CppDumper.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Attributes\ArrayLengthAttribute.cs" />
     <Compile Include="Extensions\BoyerMooreHorspool.cs" />
     <Compile Include="ExecutableFormats\ElfConstants.cs" />
     <Compile Include="Extensions\HexExtensions.cs" />
