--- a/Il2CppDumper/Il2CppDumper.csproj
+++ b/Il2CppDumper/Il2CppDumper.csproj
@@ -55,8 +55,10 @@
     <Compile Include="Extensions\BoyerMooreHorspool.cs" />
     <Compile Include="Extensions\HexExtensions.cs" />
     <Compile Include="Outputs\DummyAssemblyExporter.cs" />
+    <Compile Include="Outputs\HeaderConstants.cs" />
     <Compile Include="Outputs\Il2CppDecompiler.cs" />
     <Compile Include="Outputs\ScriptJson.cs" />
+    <Compile Include="Outputs\StructInfo.cs" />
     <Compile Include="Utils\Il2CppDummyDll.cs" />
     <Compile Include="Outputs\Il2CppConstants.cs" />
     <Compile Include="IO\Lz4DecoderStream.cs" />
