--- a/Il2CppDumper/config.json
+++ b/Il2CppDumper/config.json
@@ -8,6 +8,7 @@
   "DumpTypeDefIndex": true,
   "DummyDll": true,
   "MakeFunction": true,
+  "RequireAnyKey": true,
   "ForceIl2CppVersion": false,
   "ForceVersion": 24.3
 }
