增加输出控制

--- a/Il2CppDumper/config.json
+++ b/Il2CppDumper/config.json
@@ -6,8 +6,9 @@
   "DumpFieldOffset": true,
   "DumpMethodOffset": true,
   "DumpTypeDefIndex": true,
-  "DummyDll": true,
+  "GenerateDummyDll": true,
+  "GenerateScript": true,
   "RequireAnyKey": true,
   "ForceIl2CppVersion": false,
-  "ForceVersion": 24.3
+  "ForceVersion": 16
 }
