--- a/Il2CppDumper/config.json
+++ b/Il2CppDumper/config.json
@@ -8,6 +8,7 @@
   "DumpTypeDefIndex": true,
   "GenerateDummyDll": true,
   "GenerateStruct": true,
+  "DummyDllAddToken": true,
   "RequireAnyKey": true,
   "ForceIl2CppVersion": false,
   "ForceVersion": 16
